Fix
Fixed an issue with channel text being invisible when selected

--- a/VexsChaoticVencordTheme(xenos).theme.css
+++ b/VexsChaoticVencordTheme(xenos).theme.css
@@ -18,11 +18,11 @@
   --success-color: #43b581; /* positive accent color (hex, rgb or hsl) [default: #43b581] */
   --danger-color: #982929; /* danger accent color (hex, rgb or hsl) [default: #982929] */
   /* STATUS COLORS */
-  --online-color: #ffffff; /* online status color (hex, rgb or hsl) [default: #43b581] */
-  --idle-color: #faa61a; /* idle status color (hex, rgb or hsl) [default: #faa61a] */
-  --dnd-color: #000000; /* dnd status color (hex, rgb or hsl) [default: #982929] */
-  --streaming-color: #593695; /* streaming status color (hex, rgb or hsl) [default: #593695] */
-  --offline-color: #808080; /* offline/invisible status color (hex, rgb or hsl) [default: #808080] */
+  --online-color: #ffffff; /**/
+  --idle-color: #faa61a; /**/
+  --dnd-color: #000000; /**/
+  --streaming-color: #593695; /**/
+  --offline-color: #808080; /*Noonehearsaword*/
   /* APP BACKGROUND */
   --background-shading-percent: 50%; /* app background shading amount (0 for complete smoothness) [default: 100%] */
   --background-image: url(https://raw.githubusercontent.com/blastzone94-gif/Vex-s-Chaotic-Creature-Compendium-Vencord-Theme-WIP-/refs/heads/main/BlissXP.jpeg); /* app background image (link must be HTTPS) [default: url(https://clearvision.github.io/images/sapphire.jpg)]*/
@@ -49,11 +49,11 @@
   letter-spacing: 0.069ch; /* do not fucking change this -Xeno*/
   --main-font: "Impact", "Impact", Impact, Impact, Impact; /* main font for app (font must be installed) [default: gg sans, Helvetica Neue, Helvetica, Arial, sans-serif] */
   --code-font: Impact, "Impact", "Impact", Impact, Impact, Impact; /* font for codeblocks (font must be installed) [default: Consolas, Liberation Mono, Menlo, Courier, monospace] */
-  /* CHANNEL COLORS */
-  --channel-normal: var(--interactive-normal); /* channel text color [default: var(--interactive-normal)] */
-  --channel-muted: var(--interactive-muted); /* muted channel text color [default: var(--interactive-muted)] */
-  --channel-hover: var(--interactive-hover); /* hovered channel text color [default: var(--interactive-hover)] */
-  --channel-selected: var(--interactive-active); /* selected channel text color [default: var(--interactive-active)] */
+  /* CHANNEL COLORS >>ISSUES RN<< */
+  --channel-normal: var(--online-color); /* channel text color [default: var(--interactive-normal)] */
+  --channel-muted: var(--online-color); /* muted channel text color [default: var(--interactive-muted)] */
+  --channel-hover: var(--online-color); /* hovered channel text color [default: var(--interactive-hover)] */
+  --channel-selected: var(--online-color); /* selected channel text color [default: var(--interactive-active)] */
   --channel-selected-bg: var(--main-color); /* selected channel background [default: var(--main-color)] */
   --channel-unread: var(--main-color); /* unread channel text color [default: var(--main-color)] */
   --channel-unread-hover: var(--hover-color); /* unread channel hover color [default: var(--hover-color)] */
